syntax = "proto3";

package pb;

option go_package=".;pb";

import "internal/pb/hall.proto";
import "internal/pb/login.proto";
import "internal/pb/common.proto";
import "internal/pb/global.proto";

service Cache {
	rpc EnterGame(Request) returns (EnterGameResp) {}
	rpc CreateAccount(CreateAccountReq) returns (CreateAccountResp) {}
	rpc UpdateLoginParams(LoginParamsReq) returns (Response) {}
	rpc BindPlate(AccountInfo) returns (Response) {}
	rpc GetUserInfo(Request) returns (UserInfo) {}
	rpc GetSimpleUserInfo(Request) returns (SimpleUserInfo) {}
	rpc Auth(AuthReq) returns (AuthResp) {}
	rpc LoadBin(Request) returns (UserBin) {}
	rpc SaveBin(SaveBinReq) returns (Response) {}
	rpc Visit(VisitReq) returns (Response) {}

	// log
	rpc Enter(AccountInfo) returns (Response) {}
	rpc Leave(Request) returns (Response) {}

	// 配置
	rpc LoadTable(Request) returns (TableConfig) {}
	rpc LoadAllTable(Request) returns (stream TableConfig) {}
	rpc LoadScript(Request) returns (ScriptFile) {}
	rpc LoadAllScript(Request) returns (stream ScriptFile) {}

	// 清理账号
	rpc ClearAccount(AccountInfo) returns (Response) {}
	rpc BindAccount(BindAccountReq) returns (BindAccountResp) {}

	// 批量增加物品日志
	rpc AddSomeItemLog(ItemReq) returns (Response){}
	rpc AddSomeItem(ItemReq) returns (Response){}
	rpc GetAllClientVersion(ClientVersion) returns (LastVersion) {}

	// 字典
	rpc QueryDictValue(DictValue) returns (DictValue) {}
	rpc AddDictValue(DictValue) returns (DictValue) {}

	// 邮件
	rpc GetMailList(MailReq) returns (MailResp) {}
	rpc OperateMail(MailReq) returns (MailResp) {}
	rpc SendMail(MailReq) returns (MailResp) {}
}
